--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.12.0",
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
