--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
     "node": "8.12.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-fontawesome": "^0.1.8",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.4.1",
-    "pretty-ms": "^5.1.0",
-    "react": "^16.12.0",
-    "react-datepicker": "^2.11.0",
-    "react-dom": "^16.12.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
+    "pretty-ms": "^8.0.0",
+    "react": "^18.2.0",
+    "react-datepicker": "^6.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
