--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "mern-fitness-app",
+  "name": "karmasync-client",
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "8.12.0"
+    "node": ">=18.0.0"
   },
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
